# pi-cam-rs

./: .gitignore  Cargo.toml  README.md  setup.sh  test.sh
scripts/: gst-pi-recv.sh  gst-pi-send.sh
src/: cli.rs  main.rs
