[package]
name = "pi-cam-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[env]
#LD_LIBRARY_PATH="/usr/local/lib/arm-linux-gnueabihf"
#PKG_CONFIG_PATH="/usr/local/lib/arm-linux-gnueabihf/pkgconfig"

[dependencies]
opencv = {version="0.71.0", features=["default"]}
